fix chess.com extra margin on phone. Edit about

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,11 @@ hr {
     /* for smartphone */
     width: 90vw;
   }
+
+  /* small trick to let chess.com pgn looks better on smartphone */
+  iframe.chess {
+    margin-left: -140px;
+  }
 }
 
 /*
